CharGroup renamed to CharacterGroup

--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -114,7 +114,7 @@
     <Compile Include="Linq\Anchor\StartOfInput.cs" />
     <Compile Include="Linq\PatternSettings.cs" />
     <Compile Include="Core\CharClass.cs" />
-    <Compile Include="Linq\CharGroup\CharGroup.cs" />
+    <Compile Include="Linq\CharGroup\CharacterGroup.cs" />
     <Compile Include="Linq\CharGroupItem\CharactersItem.cs" />
     <Compile Include="Linq\CharGroupItem\CharCodeCharItem.cs" />
     <Compile Include="Linq\CharGroupItem\CharacterItem.cs" />
@@ -167,10 +167,10 @@
     <Compile Include="Linq\Character\NamedBlockPattern.cs" />
     <Compile Include="Linq\CharGroup\CharCodeRangeGroup.cs" />
     <Compile Include="Linq\CharGroup\CharRangeGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharactersGroup.cs" />
+    <Compile Include="Linq\CharGroup\LiteralsCharacterGroup.cs" />
     <Compile Include="Linq\CharGroup\CharGroupItemGroup.cs" />
     <Compile Include="Linq\CharGroup\CharCodeGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharacterGroup.cs" />
+    <Compile Include="Linq\CharGroup\LiteralCharacterGroup.cs" />
     <Compile Include="Linq\CharGroup\AsciiCharGroup.cs" />
     <Compile Include="Linq\Character\CharPattern.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
