--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Linq\Group\MaybeGroup.cs" />
     <Compile Include="Linq\IInvertible.cs" />
     <Compile Include="Linq\Pattern\NotSurroundAssertion.cs" />
-    <Compile Include="Linq\Pattern\NotCharSubtraction.cs" />
+    <Compile Include="Linq\Pattern\NotCharacterSubtraction.cs" />
     <Compile Include="Linq\Pattern\OrContainer.cs" />
     <Compile Include="Linq\Pattern\JoinContainer.cs" />
     <Compile Include="Linq\Pattern\SurroundAssertion.cs" />
@@ -127,7 +127,7 @@
     <Compile Include="Linq\CharGroupItem\CharGroupItem.cs" />
     <Compile Include="Linq\CharGroupItems.cs" />
     <Compile Include="Linq\CharGroupItem\CharGroupItem_.cs" />
-    <Compile Include="Linq\Pattern\CharSubtraction.cs" />
+    <Compile Include="Linq\Pattern\CharacterSubtraction.cs" />
     <Compile Include="Linq\Patterns.cs" />
     <Compile Include="Linq\Pattern.cs" />
     <Compile Include="Linq\Pattern_.cs" />
