--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
+    <Compile Include="Linq\CharGroupItem_.cs" />
     <Compile Include="Linq\CharGroup\GeneralCategoryCharGroup.cs" />
     <Compile Include="Linq\CharGroup\NamedBlockCharGroup.cs" />
     <Compile Include="Linq\CharGroup\CharClassCharGroup.cs" />
@@ -115,18 +116,8 @@
     <Compile Include="Linq\PatternSettings.cs" />
     <Compile Include="Core\CharClass.cs" />
     <Compile Include="Linq\CharGroup\CharacterGroup.cs" />
-    <Compile Include="Linq\CharGroupItem\CharactersItem.cs" />
-    <Compile Include="Linq\CharGroupItem\CharCodeCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\CharacterItem.cs" />
-    <Compile Include="Linq\CharGroupItem\CodeRangeCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\RangeCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\AsciiCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\CharClassCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\GeneralCategoryCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\NamedBlockCharItem.cs" />
-    <Compile Include="Linq\CharGroupItem\CharGroupItem.cs" />
+    <Compile Include="Linq\CharGroupItem.cs" />
     <Compile Include="Linq\CharGroupItems.cs" />
-    <Compile Include="Linq\CharGroupItem\CharGroupItem_.cs" />
     <Compile Include="Linq\Pattern\CharacterSubtraction.cs" />
     <Compile Include="Linq\Patterns.cs" />
     <Compile Include="Linq\Pattern.cs" />
