--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Linq\Character\NotDigit.cs" />
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
-    <Compile Include="Linq\CharGroupItem_.cs" />
+    <Compile Include="Linq\CharGrouping_.cs" />
     <Compile Include="Linq\CharGroup\GeneralCategoryCharGroup.cs" />
     <Compile Include="Linq\CharGroup\NamedBlockCharGroup.cs" />
     <Compile Include="Linq\CharGroup\CharClassCharGroup.cs" />
@@ -116,8 +116,8 @@
     <Compile Include="Linq\PatternSettings.cs" />
     <Compile Include="Core\CharClass.cs" />
     <Compile Include="Linq\CharGroup\CharacterGroup.cs" />
-    <Compile Include="Linq\CharGroupItem.cs" />
-    <Compile Include="Linq\CharGroupItems.cs" />
+    <Compile Include="Linq\CharGrouping.cs" />
+    <Compile Include="Linq\CharGroupings.cs" />
     <Compile Include="Linq\Pattern\CharacterSubtraction.cs" />
     <Compile Include="Linq\Patterns.cs" />
     <Compile Include="Linq\Pattern.cs" />
