--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Linq\Anchor\NotAssertion.cs" />
     <Compile Include="Linq\Anchor\Assertion.cs" />
     <Compile Include="Linq\Anchor\NotWordBoundary.cs" />
+    <Compile Include="Linq\CharacterGroup_.cs" />
     <Compile Include="Linq\Character\NotWordChar.cs" />
     <Compile Include="Linq\Character\WordChar.cs" />
     <Compile Include="Linq\Character\NotWhiteSpace.cs" />
@@ -65,10 +66,6 @@
     <Compile Include="Linq\Character\Digit.cs" />
     <Compile Include="Core\CharEscapeMode.cs" />
     <Compile Include="Linq\CharGrouping_.cs" />
-    <Compile Include="Linq\CharGroup\GeneralCategoryCharGroup.cs" />
-    <Compile Include="Linq\CharGroup\NamedBlockCharGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharClassCharGroup.cs" />
-    <Compile Include="Linq\CharGroup\GroupCharGroup.cs" />
     <Compile Include="Linq\Group\CountToGroup.cs" />
     <Compile Include="Linq\Group\CountFromGroup.cs" />
     <Compile Include="Linq\Group\CountGroup.cs" />
@@ -115,7 +112,7 @@
     <Compile Include="Linq\Anchor\StartOfInput.cs" />
     <Compile Include="Linq\PatternSettings.cs" />
     <Compile Include="Core\CharClass.cs" />
-    <Compile Include="Linq\CharGroup\CharacterGroup.cs" />
+    <Compile Include="Linq\CharacterGroup.cs" />
     <Compile Include="Linq\CharGrouping.cs" />
     <Compile Include="Linq\CharGroupings.cs" />
     <Compile Include="Linq\Pattern\CharacterSubtraction.cs" />
@@ -156,13 +153,6 @@
     <Compile Include="Linq\Character\NotGeneralCategoryPattern.cs" />
     <Compile Include="Linq\Character\GeneralCategoryPattern.cs" />
     <Compile Include="Linq\Character\NamedBlockPattern.cs" />
-    <Compile Include="Linq\CharGroup\CharCodeRangeGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharRangeGroup.cs" />
-    <Compile Include="Linq\CharGroup\LiteralCharactersGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharGroupItemGroup.cs" />
-    <Compile Include="Linq\CharGroup\CharCodeGroup.cs" />
-    <Compile Include="Linq\CharGroup\LiteralCharacterGroup.cs" />
-    <Compile Include="Linq\CharGroup\AsciiCharGroup.cs" />
     <Compile Include="Linq\Character\CharPattern.cs" />
     <Compile Include="Core\CaptureItemEqualityComparer.cs" />
     <Compile Include="Core\SplitItemKind.cs" />
