--- a/src/Regexator/Regexator.csproj
+++ b/src/Regexator/Regexator.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Linq\Anchor\Assertion.cs" />
     <Compile Include="Linq\Anchor\NegativeWordBoundary.cs" />
     <Compile Include="Linq\CharGroup_.cs" />
+    <Compile Include="Linq\CharMatchInfo.cs" />
     <Compile Include="Linq\CharPattern_.cs" />
     <Compile Include="Linq\CharEscapeMode.cs" />
     <Compile Include="Linq\CharGrouping_.cs" />
@@ -124,45 +125,9 @@
     <Compile Include="Linq\Syntax.cs" />
     <Compile Include="Linq\NamedBlock.cs" />
     <Compile Include="Linq\GeneralCategory.cs" />
-    <Compile Include="Core\CharMatchInfo.cs" />
     <Compile Include="Linq\RegexUtility.cs" />
     <Compile Include="Linq\AnyChar.cs" />
-    <Compile Include="Core\CaptureItemEqualityComparer.cs" />
-    <Compile Include="Core\SplitItemKind.cs" />
-    <Compile Include="Core\ResultMode.cs" />
-    <Compile Include="Core\GroupSortProperty.cs" />
-    <Compile Include="Core\MatchEqualityComparer.cs" />
-    <Compile Include="Core\ReplaceResultEqualityComparer.cs" />
-    <Compile Include="Core\ReplaceItemEqualityComparer.cs" />
-    <Compile Include="Core\SplitItemEqualityComparer.cs" />
-    <Compile Include="Core\CaptureItem.cs" />
-    <Compile Include="Core\CaptureItemCollection.cs" />
-    <Compile Include="Core\GroupSplitItem.cs" />
-    <Compile Include="Core\SplitContext.cs" />
-    <Compile Include="Core\SplitItem.cs" />
-    <Compile Include="Core\GroupInfoIndexEqualityComparer.cs" />
-    <Compile Include="Core\EnumerableExtensions.cs" />
-    <Compile Include="Core\ReplaceResult.cs" />
-    <Compile Include="Core\SplitItemCollection.cs" />
-    <Compile Include="Core\ReplaceItemCollection.cs" />
-    <Compile Include="Core\LimitState.cs" />
-    <Compile Include="Core\GroupInfo.cs" />
-    <Compile Include="Core\GroupInfoCollection.cs" />
-    <Compile Include="Core\GroupInfoSorter.cs" />
-    <Compile Include="Core\GroupItem.cs" />
-    <Compile Include="Core\GroupItemCollection.cs" />
-    <Compile Include="Core\GroupSettings.cs" />
-    <Compile Include="Core\MatchData.cs" />
-    <Compile Include="Core\MatchItem.cs" />
-    <Compile Include="Core\MatchItemCollection.cs" />
-    <Compile Include="Core\GroupItemEqualityComparer.cs" />
-    <Compile Include="Core\MatchItemEqualityComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Extensions\RegexExtensions.cs" />
-    <Compile Include="Core\ReplaceData.cs" />
-    <Compile Include="Core\ReplaceItem.cs" />
-    <Compile Include="Core\SplitData.cs" />
-    <Compile Include="Core\MatchSplitItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
