--- a/src/LinqToRegex/LinqToRegex.csproj
+++ b/src/LinqToRegex/LinqToRegex.csproj
@@ -79,6 +79,7 @@
     <Compile Include="ExceptionHelper.cs" />
     <Compile Include="Extensions\BaseGroupExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\GroupExtensions.cs" />
     <Compile Include="Extensions\MatchExtensions.cs" />
     <Compile Include="Extensions\RegexExtensions.cs" />
     <Compile Include="GeneralCategory.cs" />
