--- a/Samples/Samples.csproj
+++ b/Samples/Samples.csproj
@@ -46,6 +46,7 @@
       </SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snippets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
