--- a/src/RegexatorCore/RegexatorCore.csproj
+++ b/src/RegexatorCore/RegexatorCore.csproj
@@ -40,10 +40,6 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Pihrtsoft.Text.RegularExpressions.Linq, Version=1.0.0.30620, Culture=neutral, PublicKeyToken=01b9b207a9c6318e, processorArchitecture=MSIL">
-      <HintPath>..\..\..\RegexatorDesktop\packages\LinqToRegex.1.0.0\lib\net40\Pihrtsoft.Text.RegularExpressions.Linq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -98,7 +94,10 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\LinqToRegex\LinqToRegex.csproj">
+      <Project>{a5c864f0-d0a3-4a3c-8854-ce4ee631901b}</Project>
+      <Name>LinqToRegex</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
