--- a/src/LinqToRegex/LinqToRegex.csproj
+++ b/src/LinqToRegex/LinqToRegex.csproj
@@ -76,6 +76,8 @@
     <Compile Include="CharPattern.cs" />
     <Compile Include="CharPattern_.cs" />
     <Compile Include="CharSubtraction.cs" />
+    <Compile Include="LineInfoCollection.cs" />
+    <Compile Include="LineInfo.cs" />
     <Compile Include="ConcatPattern.cs" />
     <Compile Include="ContentPattern.cs" />
     <Compile Include="ExceptionHelper.cs" />
@@ -105,6 +107,7 @@
     <Compile Include="JoinContainer.cs" />
     <Compile Include="LazyQuantifier.cs" />
     <Compile Include="CaseAwareTextPattern.cs" />
+    <Compile Include="QuantifierKind.cs" />
     <Compile Include="SyntaxKind.cs" />
     <Compile Include="CommentBuilder.cs" />
     <Compile Include="TextPattern.cs" />
